--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,12 +4,15 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '11.0'
 
 target 'ss-map-example' do
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
   config = use_native_modules!
 
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
   target 'ss-map-exampleTests' do
@@ -17,14 +20,31 @@ target 'ss-map-example' do
     # Pods for testing
   end
 
+  pre_install do |installer|
+    $RNMBGL.pre_install(installer)
+  end
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    $RNMBGL.post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+        deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET']
+        target_components = deployment_target.split
+        if target_components.length > 0
+          target_initial = target_components[0].to_i
+          if target_initial < 9
+            config.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = '11.0'
+          end
+        end
+      end
+    end
   end
 end
