--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
+    "ios": "react-native run-ios --simulator='iPhone 14'",
     "postinstall": "patch-package"
   },
   "dependencies": {
