--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,8 @@ buildscript {
     ext {
         buildToolsVersion = "33.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 33
-        targetSdkVersion = 33
+        compileSdkVersion = 34
+        targetSdkVersion = 34
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
         kotlinVersion = "1.7.20"
@@ -35,16 +35,16 @@ buildscript {
             google()
             maven { url 'https://www.jitpack.io' }
             gradlePluginPortal()
-            maven {
-                url 'https://api.mapbox.com/downloads/v2/releases/maven'
-                authentication {
-                    basic(BasicAuthentication)
-                }
-                credentials {
-                    username = 'mapbox'
-                    password = MAPBOX_SECRET
-                }
-            }
+            // maven {
+            //     url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            //     authentication {
+            //         basic(BasicAuthentication)
+            //     }
+            //     credentials {
+            //         username = 'mapbox'
+            //         password = MAPBOX_SECRET
+            //     }
+            // }
             maven {
                 url "$rootDir/../node_modules/@notifee/react-native/android/libs"
             }
