--- a/package.json
+++ b/package.json
@@ -8,25 +8,12 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@react-native-mapbox-gl/maps": "8.5.0",
-    "@turf/bbox": "7.0.0",
-    "@turf/buffer": "6.5.0",
-    "@turf/distance": "^6.5.0",
-    "@types/prop-types": "15.7.8",
-    "@types/react": "18.3.3",
-    "@types/react-native": "0.64.13",
+    "@maplibre/maplibre-react-native": "9.0.0",
     "i18next": "20.6.1",
     "patch-package": "6.5.1",
     "react": "17.0.2",
     "react-dom": "18.2.0",
-    "react-i18next": "11.12.0",
-    "react-native": "0.66.5",
-    "react-native-geolocation-service": "5.3.1",
-    "react-native-gesture-handler": "1.10.3",
-    "react-native-permissions": "3.5.0",
-    "react-native-svg": "12.1.1",
-    "react-native-svg-transformer": "0.14.3",
-    "ss-map": "git://github.com/sovereign-solutions/ss-map.git"
+    "react-native": "0.66.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
